Added test postcard outputs to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 generate_html.config
+out/100050380169-cal.html
+out/100050380169-addr.html
+out/100050370512-cal.html
+out/100050370512-addr.html
+out/100050366002-cal.html
+out/100050366002-addr.html
+out/100050359718-cal.html
+out/100050359718-addr.html
+out/010001286067-cal.html
+out/010001286067-addr.html
+out/010001285090-cal.html
+out/010001285090-addr.html
+out/010001279831-cal.html
+out/010001279831-addr.html
