--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ out/010001285090-cal.html
 out/010001285090-addr.html
 out/010001279831-cal.html
 out/010001279831-addr.html
+out/template-back-old.html
+out/template-front-old.html
+out/css
