--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,2 @@
-generate_html.config
-out/100050380169-cal.html
-out/100050380169-addr.html
-out/100050370512-cal.html
-out/100050370512-addr.html
-out/100050366002-cal.html
-out/100050366002-addr.html
-out/100050359718-cal.html
-out/100050359718-addr.html
-out/010001286067-cal.html
-out/010001286067-addr.html
-out/010001285090-cal.html
-out/010001285090-addr.html
-out/010001279831-cal.html
-out/010001279831-addr.html
-out/template-back-old.html
-out/template-front-old.html
-out/css
-auto_print.py
+.config
 old
