--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@
 old
 .vscode
 out
-in/postcard-back-same-dates.4x4.png
+in/postcard-back-same-dates-4x4.png
 in/postcard-back-sep-dates-4x4.png
 in/postcard-front-4x4.png
